<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="zh">
    <!--app string-->
    <string name="app_name">鑫涞</string>

    <!--volley request -->
    <string name="network_error_timeout">连接超时</string>
    <string name="network_error_net_problem">网络故障</string>
    <string name="network_error_generic">出错了</string>
    <string name="network_error_parse">数据解析错误</string>
    <string name="network_none_return">没有数据返回</string>
    <!--login-->
    <string name="lgi_hint_account">请输入账号</string>
    <string name="lgi_hint_password">请输入密码</string>
    <string name="lgi_login">登录</string>
    <string name="lgi_login_text">注册</string>
    <string name="lgi_register">注册账号</string>
    <string name="lgi_forgot_password">忘记密码</string>


    <string name="xl_version_desc">鑫涞v%1$s版</string>

    <string name="sign_wifi_name">已进入WI-FI考勤范围:%1$s</string>
    <string name="sign_time">打卡时间%1$s</string>

    <string name="cf_loading">页面加载中……</string>


    <string-array name="choose_ask_leave">
        <item>请选择</item>
        <item>事假</item>
        <item>病假</item>
        <item>年假</item>
        <item>调休</item>
        <item>婚假</item>
        <item>产假</item>
        <item>陪产假</item>
        <item>其他</item>
    </string-array>
</resources>
