<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_change_elephant"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/pic_bg_look" />

            <LinearLayout
                android:id="@+id/ll_login_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/pic_bg_tv_look"
                android:orientation="vertical"
                android:paddingTop="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_log_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/logon_person"
                        android:drawablePadding="10dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:focusable="true"
                        android:hint="@string/lgi_hint_account"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions"
                        android:maxLength="32"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#585858"
                        android:textSize="14sp"
                        android:typeface="normal" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#eeeded" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_log_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:drawableLeft="@drawable/logon_lock"
                            android:drawablePadding="10dp"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/lgi_hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="32"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#585858"
                            android:textSize="14sp"
                            android:typeface="normal" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_pass_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:onClick="onClick"
                        android:src="@drawable/pic_bt_check" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/ll_login_info"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/login_bg"
            android:onClick="onClick"
            android:text="@string/lgi_login"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/lgi_forgot_password"
            android:textColor="#A6A6A6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_regsiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/lgi_register"
            android:textColor="#68AAFD"
            android:textSize="16sp" />


    </RelativeLayout>


</FrameLayout>